--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>智腕AI - Empowering Small Businesses with Intelligent Automation</title>
+  <title>Octopod AI - Empowering Small Businesses with Intelligent Automation</title>
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
