--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <h1 class="hero-title">Octopod AI</h1>
             <canvas id="particles-canvas-en" class="particles-canvas"></canvas>
           </div>
-          <h2 class="hero-subtitle">Empowering Small Businesses with Intelligent Automation</h2>
+          <h2 class="hero-subtitle">Empowering Businesses with Intelligent Automation</h2>
           <div class="vision-section">
             <h3 class="vision-title">💡 About Us</h3>
             <p class="vision-text">Octopod AI is an AI studio focused on building customized intelligent automation systems for small and medium-sized businesses. We integrate multi-agent AI and large language models (LLMs) into automated workflows and customer service, helping businesses reduce operational costs, improve efficiency, and free up human resources.</p>
