--- a/octochat.html
+++ b/octochat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OctoChat - 智能客户支持 AI Agent | 智腕AI</title>
+    <title>OctoChat - 智能客服 AI Agent | 智腕AI</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
