--- a/octochat.html
+++ b/octochat.html
@@ -1648,12 +1648,12 @@
     <!-- Dify 聊天机器人嵌入代码 -->
     <script>
         window.difyChatbotConfig = {
-            token: 'UHVIMQCGqadcPFGZ',
-            baseUrl: 'http://localhost',
+            token: 'AkpluEZPx5cJCfh1',
+            baseUrl: 'https://udify.app/embed.min.js',
             // 可以添加其他配置项
         };
     </script>
-    <script src="http://localhost/embed.min.js" id="UHVIMQCGqadcPFGZ" defer></script>
+    <script src="https://udify.app/embed.min.js" id="UHVIMQCGqadcPFGZ" defer></script>
 
     <!-- 可选：添加交互效果 -->
     <script>
