--- a/octoflow.html
+++ b/octoflow.html
@@ -1658,8 +1658,8 @@
     <!-- Dify 聊天机器人嵌入代码 -->
     <script>
         window.difyChatbotConfig = {
-            token: 'UHVIMQCGqadcPFGZ',
-            baseUrl: 'http://localhost',
+            token: 'AkpluEZPx5cJCfh1',
+            baseUrl: 'https://udify.app/embed.min.js',
         };
         
         // 动态定位聊天机器人元素
@@ -1773,7 +1773,7 @@
             }, 3000);
         });
     </script>
-    <script src="http://localhost/embed.min.js" id="UHVIMQCGqadcPFGZ" defer></script>
+    <script src="https://udify.app/embed.min.js" id="AkpluEZPx5cJCfh1" defer></script>
 
     <!-- 聊天机器人交互效果 -->
     <script>
